--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 /target/classes/com/mybatis/BeanFactory/*.class
 /target/classes/com/mybatis/interceptor/*.class
 /target/classes/com/mybatis/proxy/*.class
+/target
